# imsg-local-llm

./: .gitignore  LICENSE  Makefile  README.md  config.fast.yaml  config.yaml  contacts.example.csv  pyproject.toml
src/imsg_local_llm/: chat.py  extract.py  prepare.py  quickstart_ollama.py  train.py
