[project]
name = "imsg-local-llm"
version = "0.1.0"
description = "Fine-tune a local LLM on your own iMessage history, entirely on-device."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = { text = "MIT" }
dependencies = [
    "mlx-lm>=0.20",
    "pyyaml>=6.0",
]

[project.scripts]
imsg-extract = "imsg_local_llm.extract:main"
imsg-prepare = "imsg_local_llm.prepare:main"
imsg-train = "imsg_local_llm.train:main"
imsg-chat = "imsg_local_llm.chat:main"
imsg-quickstart = "imsg_local_llm.quickstart_ollama:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imsg_local_llm"]
